--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,10 +21,7 @@
         <button *ngIf="start_game" (click)="resetGame()">reset</button>
 
     </div>
-
-  </form>
-
-  <table cellspacing="0" cellpadding="0" border="0" bgcolor="#FFFF99">
+  </form>  <table cellspacing="0" cellpadding="0" border="0" bgcolor="#FFFF99">
     <tbody>
       <tr>
         <td *ngFor="let j of cells">
