--- a/src/app/cube/cube.component.html
+++ b/src/app/cube/cube.component.html
@@ -1,1 +1,2 @@
-<span class="empty" (click)="clicked(selected)" [style.background-color]="getStyle(selected)"></span>
+<span class="ball empty" (click)="clicked(selected)" [style.background-color]="getStyle(selected)">
+</span>
