--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,8 +9,31 @@
 		url('../fonts/codropsicons/codropsicons.svg#codropsicons') format('svg');
 }
 
+
+canvas{
+  position: absolute;
+  height: 381px;
+}
+
 .container{
   font-family: 'codropsicons';
+  position: relative;
+  &#playground{
+    width: 100%;
+    height: 100vh;
+  }
+
+  .center{
+    margin: 0 auto;
+    position: absolute;
+    width: 561px;
+    height: 379px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;    
+  }
+
 h1,h2 {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
@@ -48,6 +71,8 @@ form{
 
 table {
  display: inline-block;
+ position: absolute;
+ left: 225px;
   tbody {
     tr {
       &:first-child {
