--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
-  background: #d3d3d3;
-  width: 50%;
+  background: #0c0c0c;
+  width: 100%;
   margin: 0 auto;
 }
