--- a/src/app/players/players.component.html
+++ b/src/app/players/players.component.html
@@ -13,6 +13,6 @@
 				</label>
 			</span>
 		<button *ngIf="!start_game" type="submit" (click)="startGame()">Play</button>
-		<button *ngIf="start_game" (click)="resetGame()">reset</button>
+		<button *ngIf="start_game" (click)="resetGame()">Reset</button>
 	</div>
 </form>  
