--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,6 +21,12 @@ canvas{
   &#playground{
     width: 100%;
     height: 100vh;
+    position: relative;
+    .winer{
+      position: absolute;
+      top: 0;
+      right: 40px;
+    }
   }
 
   .center{
@@ -43,12 +49,17 @@ h1{
     color: #369;
     font-size: 40px;
     margin-bottom: 40px;
+    margin-top: 0;
+    padding-top: 40px;
+
 }
 
 h2{
-  font-size: 25px;
-  margin-top: 0px;
   color: red;
+  position: absolute;
+  top: 30px;
+  right: 40px;
+  font-size: 32px;
 }
 
 .threed {
